--- a/infrastructure/openshift/ci/cv-DeploymentConfig.yml
+++ b/infrastructure/openshift/ci/cv-DeploymentConfig.yml
@@ -2,13 +2,13 @@ apiVersion: apps.openshift.io/v1
 kind: DeploymentConfig
 metadata:
   labels:
-    app: TEST
-  name: mydata-cv-test
+    app: CI
+  name: cv-ci
 spec:
   replicas: 1
   selector:
-    app: TEST
-    deploymentconfig: mydata-cv-test
+    app: CI
+    deploymentconfig: cv-ci
   strategy:
     activeDeadlineSeconds: 21600
     rollingParams:
@@ -21,8 +21,8 @@ spec:
   template:
     metadata:
       labels:
-        app: TEST
-        deploymentconfig: mydata-cv-test
+        app: CI
+        deploymentconfig: cv-ci
     spec:
       containers:
         - env:
@@ -38,9 +38,9 @@ spec:
           - name: APP_NAME
             value: mydata-cv api
           - name: NODE_ENV
-            value: oc
+            value: test
           - name: OPERATOR_URL
-            value: 'http://mydata-operator-test.my-data.svc:3000'
+            value: 'http://mydata-operator-ci.my-data.svc:3000'
           - name: POSTGRES_USER
             value: postgresuser
           - name: POSTGRES_PASSWORD
@@ -48,14 +48,16 @@ spec:
           - name: POSTGRES_DB
             value: cv
           - name: DATABASE_URL
-            value: postgres://postgresuser:postgrespassword@postgresql-cv-test.my-data.svc:5432/cv
+            value: postgres://postgresuser:postgrespassword@postgresql-cv-ci.my-data.svc:5432/cv
           - name: REDIS
-            value: 'redis://:fubar@redis-test.my-data.svc:6379/'
+            value: 'redis://:fubar@redis-ci.my-data.svc:6379/'
           - name: CLIENT_ID
-            value: mydata-cv-test.dev.services.jtech.se
-          image: cv:test
+            value: https://mydata-cv-ci.dev.services.jtech.se
+          - name: NO_UPDATE_NOTIFIER
+            value: 'true'
+          image: cv:latest
           imagePullPolicy: Always
-          name: mydata-cv-test
+          name: cv-ci
           ports:
             - containerPort: 4000
               name: http
@@ -71,48 +73,8 @@ spec:
     - imageChangeParams:
         automatic: true
         containerNames:
-          - mydata-cv-test
+          - mydata-cv-ci
         from:
           kind: ImageStreamTag
-          name: 'cv:test'
-      
+          name: 'cv:latest'
       type: ImageChange
----
-apiVersion: v1
-kind: Service
-metadata:
-  labels:
-    app: TEST
-  name: mydata-cv-test
-spec:
-  ports:
-    - name: http
-      port: 4000
-      protocol: TCP
-      targetPort: 4000
-  selector:
-    app: TEST
-    deploymentconfig: mydata-cv-test
-  type: ClusterIP
----
-apiVersion: route.openshift.io/v1
-kind: Route
-metadata:
-  labels:
-    app: TEST
-  name: mydata-cv-test
-spec:
-  host: mydata-cv-test.dev.services.jtech.se
-  port:
-    targetPort: http
-  to:
-    kind: Service
-    name: mydata-cv-test
-    weight: 100
-  wildcardPolicy: None
-  tls:
-    valueFrom:
-      secretKeyRef:
-        key: jtech.se.crt
-        name: tls
-    termination: edge
