--- a/infrastructure/openshift/test/operator-DeploymentConfig.yml
+++ b/infrastructure/openshift/test/operator-DeploymentConfig.yml
@@ -3,12 +3,12 @@ kind: DeploymentConfig
 metadata:
   labels:
     app: TEST
-  name: mydata-operator-test
+  name: operator-test
 spec:
   replicas: 1
   selector:
     app: TEST
-    deploymentconfig: mydata-operator-test
+    deploymentconfig: operator-test
   strategy:
     activeDeadlineSeconds: 21600
     rollingParams:
@@ -22,7 +22,7 @@ spec:
     metadata:
       labels:
         app: TEST
-        deploymentconfig: mydata-operator-test
+        deploymentconfig: operator-test
     spec:
       containers:
         - env:
@@ -53,7 +53,7 @@ spec:
                 key: token
           image: operator:test
           imagePullPolicy: Always
-          name: mydata-operator-test
+          name: operator-test
           terminationMessagePath: /dev/termination-log
           terminationMessagePolicy: File
       dnsPolicy: ClusterFirst
@@ -71,42 +71,3 @@ spec:
           name: 'operator:test'
       
       type: ImageChange
----
-apiVersion: v1
-kind: Service
-metadata:
-  labels:
-    app: TEST
-  name: mydata-operator-test
-spec:
-  ports:
-    - name: http
-      port: 3000
-      protocol: TCP
-      targetPort: 3000
-  selector:
-    app: TEST
-    deploymentconfig: mydata-operator-test
-  type: ClusterIP
----
-apiVersion: route.openshift.io/v1
-kind: Route
-metadata:
-  labels:
-    app: TEST
-  name: mydata-operator-test
-spec:
-  host: mydata-operator-test.dev.services.jtech.se
-  port:
-    targetPort: http
-  to:
-    kind: Service
-    name: mydata-operator-test
-    weight: 100
-  wildcardPolicy: None
-  tls:
-    valueFrom:
-      secretKeyRef:
-        key: jtech.se.crt
-        name: tls
-    termination: edge
