--- a/app/.eslintrc.json
+++ b/app/.eslintrc.json
@@ -3,8 +3,12 @@
   "extends": ["standard", "plugin:jest/recommended", "eslint:recommended", "plugin:react/recommended"],
   "plugins": ["jest"],
   "rules": {
-    "react/prop-types": "off",
     "comma-dangle": ["error", "always-multiline"],
+    "jsx-quotes": ["error", "prefer-double"],
+    "no-unused-vars": ["error", { "argsIgnorePattern": "^_" }],
+    "object-curly-spacing": [2, "always"],
+    "quotes": ["error", "single"],
+    "react/prop-types": "off",
     "semi": ["error", "never"]
   }
 }
