--- a/infrastructure/openshift/test/operator-DeploymentConfig.yml
+++ b/infrastructure/openshift/test/operator-DeploymentConfig.yml
@@ -26,6 +26,8 @@ spec:
     spec:
       containers:
         - env:
+          - name: NODE_ENV
+            value: 'TEST'
           - name: PORT
             value: '3000'
           - name: PGHOST
