--- a/infrastructure/openshift/ci/cv-DeploymentConfig.yml
+++ b/infrastructure/openshift/ci/cv-DeploymentConfig.yml
@@ -64,6 +64,9 @@ spec:
               protocol: TCP
           terminationMessagePath: /dev/termination-log
           terminationMessagePolicy: File
+          resources:
+            limits:
+              memory: 400Mi
       dnsPolicy: ClusterFirst
       restartPolicy: Always
       schedulerName: default-scheduler
