--- a/infrastructure/openshift/test/cv-DeploymentConfig.yml
+++ b/infrastructure/openshift/test/cv-DeploymentConfig.yml
@@ -38,7 +38,7 @@ spec:
           - name: APP_NAME
             value: mydata-cv api
           - name: NODE_ENV
-            value: test
+            value: production
           - name: OPERATOR_URL
             value: 'http://operator-test.my-data.svc:3000'
           - name: POSTGRES_USER
