--- a/package.json
+++ b/package.json
@@ -11,9 +11,7 @@
     "e2e:open": "npm --prefix ./e2e run open"
   },
   "dependencies": {},
-  "devDependencies": {
-    "@babel/cli": "^7.2.3"
-  },
+  "devDependencies": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/JobtechSwe/mydata.git"
