chore(lint): Update eslint with React-version

--- a/app/.eslintrc.json
+++ b/app/.eslintrc.json
@@ -1,5 +1,11 @@
 {
   "parser": "babel-eslint",
+  "settings": {
+  "react": {
+    "createClass": "createReactClass",
+    "pragma": "React",
+    "version": "detect",
+  },
   "extends": ["standard", "plugin:jest/recommended", "eslint:recommended", "plugin:react/recommended"],
   "plugins": ["jest"],
   "rules": {
