--- a/app/.eslintrc.json
+++ b/app/.eslintrc.json
@@ -1,10 +1,11 @@
 {
   "parser": "babel-eslint",
   "settings": {
-  "react": {
-    "createClass": "createReactClass",
-    "pragma": "React",
-    "version": "detect",
+    "react": {
+      "createClass": "createReactClass",
+      "pragma": "React",
+      "version": "detect"
+    }
   },
   "extends": ["standard", "plugin:jest/recommended", "eslint:recommended", "plugin:react/recommended"],
   "plugins": ["jest"],
