--- a/operator/package.json
+++ b/operator/package.json
@@ -7,6 +7,7 @@
     "dev": "npm run migrate up && NODE_ENV=development nodemon --inspect ./lib/server.js",
     "test": "jest -c jest.config.js",
     "test:watch": "jest -c jest.config.js --watchAll",
+    "test:debug": "node --inspect-brk node_modules/jest/bin/jest -c jest.config.js --runInBand",
     "integration": "jest -c jest.integration.config.js",
     "integration:watch": "jest -c jest.integration.config.js --watchAll",
     "lint": "eslint '**/*.js'",
