--- a/operator/package.json
+++ b/operator/package.json
@@ -4,6 +4,7 @@
   "description": "Backend for managing consents and data flow",
   "scripts": {
     "start": "node ./lib/server.js",
+    "start:watch": "nodemon ./lib/server.js",
     "dev": "npm run migrate up && NODE_ENV=development nodemon --inspect ./lib/server.js",
     "test": "jest -c jest.config.js",
     "test:watch": "jest -c jest.config.js --watchAll",
