--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "audit-fix-all": "npm audit fix && npm --prefix ./app audit fix && npm --prefix ./client audit fix && npm --prefix ./examples/cv audit fix && npm --prefix ./operator audit fix && npm --prefix ./e2e audit fix",
     "lint-all": "npm --prefix ./app run lint && npm --prefix ./client run lint && npm --prefix ./examples/cv run lint && npm --prefix ./operator run lint",
     "test-all": "npm --prefix ./app test ./app && npm --prefix ./client test ./client && npm --prefix ./examples/cv test ./examples/cv && npm --prefix ./operator test ./operator",
+    "dev": "docker-compose -f docker-compose.dev.yml down && docker-compose down && docker-compose up -d && docker-compose -f docker-compose.dev.yml up -d",
     "test": "sh -c 'cd ./e2e && ./script.sh'"
   },
   "dependencies": {},
