Finished readme and added github triggers to dockerhub builds

--- a/infrastructure/openshift/shared/cv-BuildConfig.yml
+++ b/infrastructure/openshift/shared/cv-BuildConfig.yml
@@ -55,6 +55,12 @@ metadata:
 spec:
   runPolicy: Serial
   completionDeadlineSeconds: 1800
+  triggers:
+    -
+      type: GitHub
+      github:
+        secretReference:
+          name: github-webhook-secret
   source:
     git:
       ref: master
