--- a/infrastructure/openshift/shared/operator-BuildConfig.yml
+++ b/infrastructure/openshift/shared/operator-BuildConfig.yml
@@ -49,6 +49,12 @@ metadata:
 spec:
   runPolicy: Serial
   completionDeadlineSeconds: 1800
+  triggers:
+    -
+      type: GitHub
+      github:
+        secretReference:
+          name: github-webhook-secret
   source:
     git:
       ref: master
