--- a/infrastructure/openshift/ci/cv-DeploymentConfig.yml
+++ b/infrastructure/openshift/ci/cv-DeploymentConfig.yml
@@ -77,6 +77,26 @@ spec:
           resources:
             limits:
               memory: 400Mi
+          readinessProbe:
+            failureThreshold: 59
+            httpGet:
+              path: /health
+              port: 4000
+              scheme: HTTP
+            initialDelaySeconds: 1
+            periodSeconds: 1
+            successThreshold: 1
+            timeoutSeconds: 1
+          livenessProbe:
+            failureThreshold: 3
+            httpGet:
+              path: /health
+              port: 4000
+              scheme: HTTP
+            initialDelaySeconds: 60
+            periodSeconds: 10
+            successThreshold: 1
+            timeoutSeconds: 5
       dnsPolicy: ClusterFirst
       restartPolicy: Always
       schedulerName: default-scheduler
