--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,11 @@
 language: node_js
 node_js:
-  - '10'
+  - "10"
 
 install: npm run install-all
 
 script:
+  - npm run test
   - bash build.bash
 
 branches:
