--- a/operator/package.json
+++ b/operator/package.json
@@ -6,7 +6,7 @@
     "start": "node ./lib/server.js",
     "start:watch": "nodemon ./lib/server.js",
     "dev": "npm run migrate up && NODE_ENV=development nodemon --inspect ./lib/server.js",
-    "test": "jest -c jest.config.js",
+    "test": "jest -c jest.config.js --detectOpenHandles",
     "test:watch": "jest -c jest.config.js --watchAll",
     "integration": "jest -c jest.integration.config.js",
     "integration:watch": "jest -c jest.integration.config.js --watchAll",
