--- a/app/ios/MyData/Info.plist
+++ b/app/ios/MyData/Info.plist
@@ -17,7 +17,7 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>0.0.1</string>
+	<string>0.0.2</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleURLTypes</key>
@@ -34,7 +34,7 @@
 		</dict>
 	</array>
 	<key>CFBundleVersion</key>
-	<string>4</string>
+	<string>11</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSAppTransportSecurity</key>
@@ -50,10 +50,6 @@
 			</dict>
 		</dict>
 	</dict>
-	<key>NSSpeechRecognitionUsageDescription</key>
-	<string>We need this in order to detect what abilities your device supports.</string>
-	<key>NSMotionUsageDescription</key>
-	<string>We need this in order to detect what abilities your device supports.</string>
 	<key>NSAppleMusicUsageDescription</key>
 	<string>We need this in order to detect what abilities your device supports.</string>
 	<key>NSBluetoothPeripheralUsageDescription</key>
@@ -63,7 +59,13 @@
 	<key>NSCameraUsageDescription</key>
 	<string>We need the camera to scan QR codes</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string/>
+	<string></string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>We need this in order to detect what abilities your device supports.</string>
+	<key>NSMotionUsageDescription</key>
+	<string>We need this in order to detect what abilities your device supports.</string>
+	<key>NSSpeechRecognitionUsageDescription</key>
+	<string>We need this in order to detect what abilities your device supports.</string>
 	<key>UIAppFonts</key>
 	<array>
 		<string>AntDesign.ttf</string>
