--- a/app/package.json
+++ b/app/package.json
@@ -28,6 +28,7 @@
     "react-native-device-info": "^0.26.4",
     "react-native-gesture-handler": "^1.1.0",
     "react-native-json-tree": "^1.2.0",
+    "react-native-modal": "^9.0.0",
     "react-native-paper": "^2.7.0",
     "react-native-push-notification": "^3.1.2",
     "react-native-qrcode-scanner": "^1.1.2",
