--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,6 @@
+env:
+  - DOCKER_COMPOSE_VERSION=1.4.2
+
 jobs:
   include:
     - stage: run_tests
@@ -9,6 +12,11 @@ jobs:
           - app/node_modules
           - examcples/cv/node_modules
           - operator/node_modules
+      before_install:
+        - sudo rm /usr/local/bin/docker-compose
+        - curl -L https://github.com/docker/compose/releases/download/${DOCKER_COMPOSE_VERSION}/docker-compose-`uname -s`-`uname -m` > docker-compose
+        - chmod +x docker-compose
+        - sudo mv docker-compose /usr/local/bin
       install:
         - npm run install-all
       script:
