--- a/.travis.yml
+++ b/.travis.yml
@@ -42,9 +42,9 @@ jobs:
       script: bash infrastructure/travis/deploy.sh
 stages:
   - name: lint
-    if: branch = master OR type = pull_request
+    if: branch != master OR type = pull_request
   - name: e2e
-    if: branch = master OR type = pull_request
+    if: branch != master OR type = pull_request
   - name: build
     if: (branch = master AND type != pull_request) OR tag IS present
   - name: deploy
