Working on the build steps

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,10 +11,11 @@ jobs:
         - npm run install-all
       test: skip
       script:
-        - npm run lint-all
+        - echo meow
+        # - npm run lint-all
 
     # end-to-end tests
-    - stage: "endToEnd"
+    - stage: "end-2-end"
       name: "End-to-end tests"
       language: node_js
       # cache:
@@ -37,10 +38,19 @@ jobs:
     # build docker image(s)
     - stage: build
       install: skip
+      test:
+        - docker login -u $DOCKER_USER -p $DOCKER_PASS
       services:
         - docker
       script:
-        - bash infrastructure/travis/build.sh
+        - docker build -t JobTechSwe/app app
+        - docker push JobTechSwe/app
+      script:
+        - docker build -t JobTechSwe/cv examples/cv
+        - docker push JobTechSwe/cv
+      script:
+        - docker build -t JobTechSwe/operator operator
+        - docker push JobTechSwe/operator
 
     # update openshift DeployConfig(s)
     - stage: deploy
@@ -48,10 +58,12 @@ jobs:
         - bash ./infrastructure/travis/install-openshift.sh
         - export PATH=$PATH:/tmp/openshift
       script: bash infrastructure/travis/deploy.sh
+
+# Flow control
 stages:
   - name: lint
     if: branch != master OR type = pull_request
-  - name: endToEnd
+  - name: end-2-end
     if: branch != master OR type = pull_request
   - name: build
     if: (branch = master AND type != pull_request) OR tag IS present
